Update dependencies for Java 11 build compatibility